--- a/OT Performance Tracer.csproj
+++ b/OT Performance Tracer.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <FileVersion>0.0.2</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
